2011-05-25 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-11
   * R/bayesglm: fix a bug  when there are some observation-weights that are zero.

2011-05-9 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-10
   * R/display: fix a bug in display.lm that fails to print out se.


2011-05-8 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-09
   * R/binnedplot: fix a bug of no sd when binnedplot only get one point.

2011-04-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-08
   * display: now return objects after displaying the fitted model.
   * sigma.hat: fix a bug in sigma.hat for mer
   
   
2011-03-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-07
   * AllClass:  add sim.polr class
   * coef: add coef() for sim.polr 
   * sim: add sim() for polr 

2011-03-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-06
   * NAMESPACE: export distcrete.histogram

2011-02-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-04
   * R/binnedplot: pass addition graphical parameters to the function.

2011-02-15 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-03
   * R/sim: fix a bug in sim.glm() when there is only an intercept 
        as a predictor. (discovered by Barnes Benjamin)


2011-02-14 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-02
   * R/bayesglm: fix some dimension issues when NCOL(x.nobs)==1

2011-02-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-01
   * R/load.first: lib --> lib.loc in packageDescription

2010-11-20 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-08
    * R/simmer: samples directly from the posterior 
        of the fixed and random effects, given sigma and Sigma
